--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
-    "expo": "~45.0.0",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "expo": "^49.0.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
     "react-native-animatable": "^1.3.3",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
