--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-animatable": "^1.3.3",
-    "react-native-snap-carousel": "4.0.0-beta.6",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.10.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
@@ -25,6 +26,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.66.13",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "typescript": "^5.1.3"
   },
   "private": true
