--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.1.2",
     "@reduxjs/toolkit": "^1.8.2",
     "expo": "^49.0.0",
     "expo-linear-gradient": "~12.3.0",
@@ -17,7 +18,7 @@
     "react-native": "0.72.3",
     "react-native-animatable": "^1.3.3",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^13.10.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
